[package]
name = "fern"
version = "0.1.0"
authors = ["j-devel"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# https://github.com/rust-random/rand/issues/810
rand = { version = "0.7", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
