[package]
name = "fern"
version = "0.0.0"
authors = ["j-devel"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-mt = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.2"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# https://github.com/rust-random/rand/issues/810
rand = { version = "0.7", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
